# r_linux

./: .gitignore  TODO.txt  a.c  e_valgrind.txt
bash/: command_apt.sh  know_how.sh  stdio.sh
bash/command/: alias.sh  command_chown.sh  command_cmp.sh  command_data_linux.sh  command_dd.sh  command_dpkg.sh  command_echo.sh  command_eval.sh  command_file.sh  command_find.sh  command_hostname.sh  command_info_system  command_ldd.sh  command_ls.sh  command_read.sh  command_set_and_bash_option.sh  command_stat_FreeBSD.sh  command_strace.sh  command_tar.sh  command_timeout.sh  command_tree.sh  command_vbindiff.sh  flow_control.sh  function.sh  know_how.sh  loop.sh  switch.sh  table.sh  variable_substitution.sh  w_select.sh
bash/script/: sendmail_example.sh  show_absolute_path_of_executing_script.sh
c/: 2  pointer.c  questions.c
c/a_lib/: a_generate.h  f_rand.c
c/advanced/: memory.c  obraz.c  read_environment_variable.c  stdout_redirection.c
c/basic/: operation_on_bit.c  union.c
c/compilation/: about_compile.txt  gcc.txt
cpp/: virtual.cpp
different/: different.txt  e_gdb.txt  scp_download_from_server.txt  used_program.txt
e_cmake/: cmake_know_how.txt  edu.txt
e_cmake/message/option/: CMakeLists.txt  run.sh
e_cmake/project/ssl_hello/: CMakeLists.txt  r.sh  ssl_hello.c
e_make/: make_echo.mk  make_foreach.mk  make_how_debug.txt  make_shell.mk  make_variable_assignment.mk
e_sqlite/: Makefile  insert_data  insert_data.c  version  version_select
english/: adverbs.txt  imieslow.txt  use.txt
my_diff/: title_music.txt
sed_and_awk/: awk.txt  sed.txt
(+196 files in other folders)
